--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "antd": "^5.12.2",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "next": "14.0.4",
     "react": "^18",
